# PedagogIA

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  eslint.config.js  init.sql  package-lock.json  package.json
backend/: .env.example  Dockerfile  manage.py  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: bee383cf0753_baseline_skills_students_sessions_.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  exercise_template.py  session.py  skill.py  student.py
backend/app/routers/: exercises.py  skills.py
backend/app/schemas/: exercise.py
backend/app/skill_tree/: exercise_templates_p1.yaml  exercise_templates_p5.yaml  seed.py  skills.yaml  tree.py
backend/apps/accounts/: adapters.py  admin.py  models.py  serializers.py  views.py
backend/apps/atelier_pdf/: apps.py  urls.py  views.py
backend/apps/chat/: admin.py  models.py  serializers.py  tutor.py  urls.py  views.py
backend/apps/common/: middleware.py  permissions.py
backend/apps/exercises/: admin.py  atelier_views.py  diagnostic.py  diagnostic_views.py  drill.py  drill_views.py  exam.py  exam_views.py  investigation.py  models.py  playground_views.py  scoring.py  serializers.py  services.py  urls.py  views.py
backend/pedagogia/: asgi.py  urls.py  wsgi.py
backend/src/: config.py  database.py  main.py
backend/staticfiles/: staticfiles.json
backend/tests/: conftest.py  test_account_update.py  test_achievements.py  test_admin_url.py  test_atelier_api.py  test_atelier_pdf.py  test_attempt_integrity.py  test_auth.py  test_chat.py  test_diagnostic_api.py  test_diagnostic_irt.py  test_drill_api.py  test_exam_api.py  test_exercise_gen.py  test_exercise_gen_ceb.py  test_exercises_api.py  test_exports.py  test_gamification_api.py  test_health.py  test_input_types.py  test_investigation.py  test_mastery.py  test_parent_overview.py  test_playground.py  test_real_ip.py  test_scoping.py  test_scoring_ceb.py  test_selection.py  test_session_history.py  test_skill_tree.py  test_skills_api.py  test_streaks.py  test_student_update.py  test_students_api.py  test_throttling.py  test_voice.py  test_xp.py
deploy/: restore.md
(+371 files in other folders)
