[project]
name = "pedagogia-backend"
version = "0.1.0"
description = "PedagogIA backend — adaptive math learning for FWB students"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
