[project]
name = "pedagogia-backend"
version = "0.1.0"
description = "PedagogIA backend — adaptive math learning for FWB students"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.15",
    "pydantic-settings>=2.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28",
    "ruff>=0.11",
]
